# Go-OS

./: .gitattributes  .gitignore  Makefile  Makefile.legacy-bios  README.md  linker.ld  patch.py
.cargo_home/: env
.cutekit/: hostid
.rustup_home/: settings.toml
.rustup_home/update-hashes/: stable-aarch64-apple-darwin
LINUXRT/: RTBASE.LST
LINUXRT/LIB/: RTB0263.2  RTB0266.2  RTB0269.1  RTB0270.1  RTB0270.2  RTB0273.1  RTB0276.0  RTB0276.1  RTB0277.1  RTB0279.1  RTB0279.2  RTB0280.2  RTB0281.1
LINUXRT/USR/LIB/: RTB0324.0  RTB0332.0  RTB0337.0  RTB0340.0  RTB0341.0  RTB0342.0  RTB0343.0  RTB0345.0  RTB0346.0  RTB0350.0  RTB0351.0  RTB0352.0  RTB0355.0  RTB0356.0  RTB0357.0  RTB0361.0  RTB0362.0  RTB0365.0  RTB0367.0  RTB0369.0  RTB0375.0  RTB0376.0  RTB0377.0  RTB0379.0  RTB0380.0  RTB0380.1  RTB0384.0  RTB0385.0  RTB0386.0
SERVORT/: README.md
apps/cpp_doom/: README.md  build.sh
apps/hello_redux/: main.rdx  main.rml  manifest.json
apps/linux_wayland_gtk_demo/: README.md  build.sh  main.c  main.rdx  main.rml
apps/linux_wayland_qt_demo/: README.md  build.sh  main.cpp  main.rdx  main.rml
apps/linux_x11_anim_demo/: build.sh  x11_anim.asm
apps/linux_x11_demo/: build.sh  x11_demo.asm
apps/linux_x11_dyn_demo/: build.sh
boot/: boot.asm
docs/: USB_GUI_COMMANDS.txt  WAYLAND_KERNEL_MIGRATION.md
drivers/: driver.cpp
grub/: grub-uefi.cfg  grub.cfg
include/: kernel_api.h
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  allocator.rs  audio.rs  fat32.rs  font.rs  framebuffer.rs  fs.rs  hal.rs  input.rs  intel_net.rs  intel_wifi.rs  intel_xe.rs  interrupts.rs  legacy_bios.rs  linux_compat.rs  linux_sysent.rs  litehtmlbridge_fetch_ffi.rs  litehtmlbridge_shim.rs  main.rs  memory.rs  nvme.rs  paging.rs  pci.rs  per_core.rs  preboot_installer.rs  privilege.rs  process.rs  quota.rs  ruby_runtime.rs  runtime.rs  scheduler.rs  simpleservo_shim.rs  smp.rs  spinlock.rs  syscall.rs  timer.rs  ui.rs  usermode.rs  utils.rs  vaevbridge_shim.rs  (+7 more)
kernel/src/gui/: compositor.rs  mod.rs  window.rs  window.rs.orig
kernel/src/gui/widgets/: button.rs  mod.rs  taskbar.rs  terminal.rs
kernel/src/net/: mod.rs  tls.rs
kernel/src/virtio/: block.rs  input.rs  mod.rs  net.rs  queue.rs
libc/: libc.c
recipes/cpp_doom/: recipe.toml
recipes/hello_redux/: recipe.toml
recipes/linux_sandbox_smoke/: recipe.toml
recipes/linux_wayland_gtk_demo/: recipe.toml
recipes/linux_wayland_qt_demo/: recipe.toml
recipes/linux_x11_anim_demo/: recipe.toml
recipes/linux_x11_demo/: recipe.toml
recipes/linux_x11_dyn_demo/: recipe.toml
scripts/: DOOMAUTO.NSH  bootstrap_linuxrt.sh  build_iso.sh  build_libsimpleservo_adapter.sh  build_litehtml_bridge.sh  create_windows_tree.ps1  deploy.rb  generate_freebsd_linux_sysent.sh  install_nvme.sh  install_nvme_dual.sh  link_servo_desktop.sh  newlib_port.sh  package_cef_runtime_usb.sh  repo_fetch.sh  run_cef_host_bridge.sh  run_redux_ide.sh  run_servo_host_bridge.sh  run_uefi.sh  run_vaev_host_bridge.sh  run_webkit_host_bridge.sh  run_wry_host_bridge.sh  stage_linux_guest.sh  stage_servort_runtime.sh  stage_wayland_demo_bins.sh  sync_litehtml_upstream.sh  tauri_doctor.sh
sdk/newlib_cpp/: README.md  build_app.sh  crt0.S  linux_syscall.h  newlib_syscalls.cpp
sdk/newlib_cpp/examples/: hello_cpp.cpp
sdk/reduxlang/: Cargo.toml
sdk/reduxlang/src/: ast.rs  eval.rs  lexer.rs  main.rs  parser.rs  token.rs
tools/: bootstrap_repo.rb  mp4_to_rpv.py  redux_get.rb  redux_ide.rb  redux_recipe_build.rb  repo.json  rpx_pack.rb  rpx_unpack.rb
tools/cef_host_bridge/: CMakeLists.txt  PHASES.md  README.md
tools/cef_host_bridge/src/: main.cpp
tools/libsimpleservo_adapter/: Cargo.toml
tools/servo_host_bridge/: Cargo.toml
tools/vaev_host_bridge/: README.md  vaev_host_bridge.rb
tools/wry_host_bridge/: Cargo.toml  README.md
(+100 files in other folders)
